[package]
name = "reltime"
version = "0.1.0"
edition = "2024"
description = "Relative time representations with language support"
license = "MIT"
repository = "https://github.com/stefanterdell/reltime"

[features]
default = ["swedish"]
swedish = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2", features = ["display"] }
schemars = { version = "1.2", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }

[workspace]
members = ["cli"]
