[package]
name = "time-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "time"
path = "./src/main.rs"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive", "env"] }
schemars = { version = "1.2.0", features = ["chrono04"] }
serde_json = "1.0.149"
time = { version = "0.1.0", path = ".." }
